--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -85,60 +85,60 @@
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (10).jpeg">
-                            <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                              <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                              <p class="leading-relaxed">l'Institut Spécialisé de Technologie Appliquée (ISTA) dans la zone de Zenata, projet porté par l'OFPPT située</p>
+                            <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                              <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                              <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                              <p class="leading-relaxed text-white font-medium drop-shadow-sm">l'Institut Spécialisé de Technologie Appliquée (ISTA) dans la zone de Zenata, projet porté par l'OFPPT située</p>
                             </div>
                           </div>
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="l.JPG">
-                            <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                              <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                              <p class="leading-relaxed">dans la nouvel éco-cité de Zenata, une zone qui vise à être un modèle de ville environnementale et durable avec des</p>
+                            <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                              <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                              <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                              <p class="leading-relaxed text-white font-medium drop-shadow-sm">dans la nouvel éco-cité de Zenata, une zone qui vise à être un modèle de ville environnementale et durable avec des</p>
                             </div>
                           </div>
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="ll.JPG">
-                            <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                              <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                              <p class="leading-relaxed"> espaces verts, un éclairage 100% LED et 100% en fibre.<br>Le projet est certifié HQE Niveau :</p>
+                            <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                              <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                              <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                              <p class="leading-relaxed text-white font-medium drop-shadow-sm"> espaces verts, un éclairage 100% LED et 100% en fibre.<br>Le projet est certifié HQE Niveau :</p>
                             </div>
                           </div>
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="lll.JPG">
-                            <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                              <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                              <p class="leading-relaxed">Excellent basée sur le référentiel Certivea « HQETM Performance Environnementale Bâtiment</p>
+                            <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                              <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                              <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                              <p class="leading-relaxed text-white font-medium drop-shadow-sm">Excellent basée sur le référentiel Certivea « HQETM Performance Environnementale Bâtiment</p>
                             </div>
                           </div>
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (5).jpeg">
-                            <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                              <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                              <p class="leading-relaxed">Résidentiel » version 2021. Ce bâtiment neuf s'étend sur une surface de 2745 m2 sur une parcelle de 7000 m2.</p>
+                            <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                              <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                              <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                              <p class="leading-relaxed text-white font-medium drop-shadow-sm">Résidentiel » version 2021. Ce bâtiment neuf s'étend sur une surface de 2745 m2 sur une parcelle de 7000 m2.</p>
                             </div>
                           </div>
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
                             <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="IMG_4392.JPG">
-                            <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                              <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                              <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                              <p class="leading-relaxed">Il comporte 6 ateliers, 8 salles de cours et des espaces sportifs. Le bâtiment a été conçu dans une démarche durable</p>
+                            <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                              <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                              <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                              <p class="leading-relaxed text-white font-medium drop-shadow-sm">Il comporte 6 ateliers, 8 salles de cours et des espaces sportifs. Le bâtiment a été conçu dans une démarche durable</p>
                             </div>
                           </div>
                         </div>
@@ -146,10 +146,10 @@
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
                               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="pp.JPG">
-                              <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                                <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">exemplaire avec une ventilation naturelle et des façades traversantes pour une meilleure circulation de l'air.</p>
+                              <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                                <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                                <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                                <p class="leading-relaxed text-white font-medium drop-shadow-sm">exemplaire avec une ventilation naturelle et des façades traversantes pour une meilleure circulation de l'air.</p>
                               </div>
                             </div>
                           </div>
@@ -157,10 +157,10 @@
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
                               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (7).jpeg">
-                              <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                                <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">également des dispositifs de récupération des eaux usées pour un usage d'arrosage, ainsi que des</p>
+                              <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                                <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                                <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                                <p class="leading-relaxed text-white font-medium drop-shadow-sm">également des dispositifs de récupération des eaux usées pour un usage d'arrosage, ainsi que des</p>
                               </div>
                             </div>
                           </div>
@@ -168,10 +168,10 @@
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
                               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (8).jpeg">
-                              <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                                <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">panneaux solaires thermiques pour l'eau chaude sanitaire et les douches. L'éclairage artificiel en LED est équipé</p>
+                              <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                                <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                                <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                                <p class="leading-relaxed text-white font-medium drop-shadow-sm">panneaux solaires thermiques pour l'eau chaude sanitaire et les douches. L'éclairage artificiel en LED est équipé</p>
                               </div>
                             </div>
                           </div>
@@ -180,10 +180,10 @@
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
                               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (9).jpeg">
-                              <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                                <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">de capteurs de luminosité pour une meilleure gestion de l'énergie. <br>Surface nette : 2 745 m2 SRE</p>
+                              <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                                <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                                <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                                <p class="leading-relaxed text-white font-medium drop-shadow-sm">de capteurs de luminosité pour une meilleure gestion de l'énergie. <br>Surface nette : 2 745 m2 SRE</p>
                               </div>
                             </div>
                           </div>
@@ -191,10 +191,10 @@
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
                               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="IMG_3809.JPG">
-                              <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                                <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Coût de construction ou de rénovation : 4 170 428 € ,
+                              <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                                <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                                <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                                <p class="leading-relaxed text-white font-medium drop-shadow-sm">Coût de construction ou de rénovation : 4 170 428 € ,
                                   Nombre d'unités fonctionnelles : 720 Elèves/étudiants</p>
                               </div>
                             </div>
@@ -203,10 +203,10 @@
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
                               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="p.JPG">
-                              <div class="px-8 py-10 relative z-10 w-full border-4 border-white-400 bg-green-200 opacity-0 hover:opacity-75">
-                                <h2 class="tracking-widest text-sm title-font font-bold text-darkblue-500 mb-1">ISTA ZENATA</h2>
-                                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Infos générales</h1>
-                                <p class="leading-relaxed">Adresse : Route Nationale N° 9 JNANE ZENATA AIN HARROUDA 28630 MOHAMMEDIA, Maroc
+                              <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
+                                <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
+                                <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
+                                <p class="leading-relaxed text-white font-medium drop-shadow-sm">Adresse : Route Nationale N° 9 JNANE ZENATA AIN HARROUDA 28630 MOHAMMEDIA, Maroc
                                   Zone climatique.</p>
                               </div>
                             </div>
