--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -84,7 +84,8 @@
                       <div class="flex flex-wrap -m-4">
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (10).jpeg">
+                            <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (10).jpeg" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -94,7 +95,8 @@
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="l.JPG">
+                            <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="l.JPG" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -104,7 +106,8 @@
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="ll.JPG">
+                            <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="ll.JPG" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -114,7 +117,8 @@
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="lll.JPG">
+                            <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="lll.JPG" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -124,7 +128,8 @@
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (5).jpeg">
+                            <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (5).jpeg" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -134,7 +139,8 @@
                         </div>
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                           <div class="flex relative">
-                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="IMG_4392.JPG">
+                            <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                            <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="IMG_4392.JPG" loading="lazy">
                             <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                               <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                               <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -145,7 +151,8 @@
 
                         <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
-                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="pp.JPG">
+                              <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="pp.JPG" loading="lazy">
                               <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                                 <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -156,7 +163,8 @@
 
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
-                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (7).jpeg">
+                              <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (7).jpeg" loading="lazy">
                               <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                                 <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -167,7 +175,8 @@
 
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
-                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (8).jpeg">
+                              <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (8).jpeg" loading="lazy">
                               <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                                 <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -179,7 +188,8 @@
 
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
-                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (9).jpeg">
+                              <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="WhatsApp Image 2023-10-21 at 16.17.58 (9).jpeg" loading="lazy">
                               <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                                 <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -190,7 +200,8 @@
 
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
-                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="IMG_3809.JPG">
+                              <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="IMG_3809.JPG" loading="lazy">
                               <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                                 <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
@@ -202,7 +213,8 @@
 
                           <div class="lg:w-1/3 sm:w-1/2 p-4">
                             <div class="flex relative">
-                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="p.JPG">
+                              <div class="absolute inset-0 w-full h-full bg-gray-300 animate-pulse"></div>
+                              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="p.JPG" loading="lazy">
                               <div class="px-8 py-10 relative z-10 w-full bg-slate-800 bg-opacity-0 opacity-0 hover:opacity-100 hover:bg-opacity-70">
                                 <h2 class="tracking-widest text-sm title-font font-bold text-white mb-1">ISTA ZENATA</h2>
                                 <h1 class="title-font text-lg font-medium text-white mb-3">Infos générales</h1>
