--- a/Pages/about.html
+++ b/Pages/about.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="background font-[Montserrat]">
+<body class="background bg-slate-200 font-[Montserrat]">
     <!-- Navigation Bar -->
     <header class="container mx-auto">
         <nav class="flex justify-between items-center py-8 mx-auto">
