--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body class="gradient_bg">
+<body class="gradient_bg bg-slate-200">
     <!-- Navigation Bar -->
     <header class="container mx-auto">
         <nav class="flex justify-between items-center py-8 mx-auto">
