--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -20,7 +20,7 @@
 </style>
 </head>
 
-<body class="background font-[Montserrat]">
+<body class="background bg-slate-200 font-[Montserrat]">
     <!-- Navigation Bar -->
     <header class="container mx-auto">
         <nav class="flex justify-between items-center py-8 mx-auto">
@@ -31,26 +31,26 @@
                 </a>
             </div>
             <div
-                class="container mx-auto right-0 rounded-lg nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 bg-opacity-30 backdrop-blur-xl border border-white lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
+                class="container mx-auto right-0 nav-links duration-0 lg:static text-center justify-center absolute bg-slate-100 bg-opacity-30 backdrop-blur-xl border border-white lg:border-none  lg:bg-transparent lg:backdrop-blur-none lg:shadow-none shadow-lg lg:min-h-fit min-h-[45vh] left-0 top-[-100%] lg:justify-end w-full flex items-center">
                 <ul class="flex font-semibold text-xl lg:flex-row flex-col lg:items-center lg:gap-[4vw] gap-8">
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800  hover:font-extrabold transition-all ease-in"
                             href="../index.html">Home</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold  transition-al  ease-in"
+                        <a class="text-slate-800  hover:font-extrabold  transition-al  ease-in"
                             href="./about.html">About</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800  hover:font-extrabold transition-all ease-in"
                             href="#">Activities</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800  hover:font-extrabold transition-all ease-in"
                             href="./gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a class="text-slate-800  rounded-md hover:font-extrabold transition-all ease-in"
+                        <a class="text-slate-800  hover:font-extrabold transition-all ease-in"
                             href="#">Contact</a>
                     </li>
                 </ul>
