--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section>
 
     <!-- FAQ -->
-    <section class="bg-slate-300 ">
+    <section class="bg-slate-300 transition-all duration-200 ease-in-out">
         <h1 class=" titre font-bold text-3xl text-center flex justify-center py-10 mx-auto ">FAQ <span class="text-[#00D897]">.</span>
         </h1>
         <section class=" bg-slate-300 text-slate-600 body-font overflow-hidden">
@@ -145,72 +145,61 @@
                   <div id="accordion-collapse" data-accordion="collapse">
                       <h2 id="accordion-collapse-heading-1">
                         <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  dark:text-black " data-accordion-target="#accordion-collapse-body-1" aria-expanded="true" aria-controls="accordion-collapse-body-1">
-                          <span>WHAT IS OFPPT ISTA ZENATA ?</span>
+                          <span>What is OFPPT ISTA Zenata?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
                         </svg>
                       </button>
                     </h2>
                     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
-                      <div class="p-5  dark:bg-slate-100">
-                        <p class="mb-2 text-black dark:text-black">Flowbite is an open-source library of interactive components built on top of Tailwind CSS including buttons, dropdowns, modals, navbars, and more.</p>
-                        <p class="text-black dark:text-black">Check out this guide to learn how to <a href="/docs/getting-started/introduction/" class="text-blue-600 dark:text-blue-500 hover:underline">get started</a> and start developing websites even faster with components on top of Tailwind CSS.</p>
+                      <div class="p-5  bg-slate-200">
+                        <p class="mb-2 text-black dark:text-black">Founded in 1974, OFPPT is a public training institution. It offers vocational training free of charge. The training is based on a demand-driven strategy meeting the qualification needs and requirements of the labor market. OFPPT has a large network of training centers all over Morocco. These centers provide acknowledged competencies at the service of business companies.</p>
+                        
                       </div>
                     </div>
                     <div class="py-[10px]"></div>
 
                     <h2 id="accordion-collapse-heading-2">
                         <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  ark:text-black " data-accordion-target="#accordion-collapse-body-2" aria-expanded="true" aria-controls="accordion-collapse-body-2">
-                          <span>HOW LONG DO THE PROGRAME AT ISTA ZENATA TYPICALLY LAST ?</span>
+                          <span >How long do the programs at ISTA Zenata typically last?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
                         </svg>
                       </button>
                     </h2>
                     <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
-                      <div class="p-5 dark:bg-slate-100">
-                        <p class="mb-2 text-black dark:text-black">Flowbite is first conceptualized and designed using the Figma software so everything you see in the library has a design equivalent in our Figma file.</p>
-                        <p class="text-black dark:text-black">Check out the <a href="https://flowbite.com/figma/" class="text-blue-600 dark:text-blue-500 hover:underline">Figma design system</a> based on the utility classes from Tailwind CSS and components from Flowbite.</p>
+                      <div class="p-5 bg-slate-200">
+                        <p class="mb-2 text-black dark:text-black">Program durations vary depending on the field of study. You can find detailed information about the duration of each
+                        program on the respective program pages.</p>
+                        
                       </div>
                     </div>
                     <div class="py-[10px]"></div>
                     <h2 id="accordion-collapse-heading-3">
                         <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rk:text-black " data-accordion-target="#accordion-collapse-body-3" aria-expanded="true" aria-controls="accordion-collapse-body-3">
-                          <span>HOW CAN I APPLY FOR A PROGRAME AT ISTA ZENATA ?</span>
+                          <span>How can I apply for a program at ISTA Zenata?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
                         </svg>
                       </button>
                     </h2>
                     <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
-                      <div class="p-5 border border-t-0 border-slate-200 dark:bg-slate-100">
-                        <p class="mb-2 text-black dark:text-black">The main difference is that the core components from Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers sections of pages.</p>
-                        <p class="mb-2 text-black dark:text-black">However, we actually recommend using both Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best of two worlds.</p>
-                        <p class="mb-2 text-black dark:text-black">Learn more about these technologies:</p>
-                        <ul class="pl-5 text-slate-500 list-disc dark:text-slate-400">
-                          <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
-                          <li><a href="https://tailwindui.com/" rel="nofollow" class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-                        </ul>
+                      <div class="p-5 border border-t-0 border-slate-200 bg-slate-200">
+                        <p class="mb-2 text-black dark:text-black">To apply for a program, please visit our Application Page and follow the instructions provided.</p>
                       </div>
                     </div>
                     <div class="py-[10px]"></div>
                     <h2 id="accordion-collapse-heading-4">
                         <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rk:text-black " data-accordion-target="#accordion-collapse-body-4" aria-expanded="true" aria-controls="accordion-collapse-body-4">
-                          <span>WHAT IS OFPPT ISTA ZENATA ?</span>
+                          <span>How can I contact the admissions office for further assistance?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
                         </svg>
                       </button>
                     </h2>
                     <div id="accordion-collapse-body-4" class="hidden" aria-labelledby="accordion-collapse-heading-4">
-                      <div class="p-5 border border-t-0 border-slate-200 dark:bg-slate-100">
-                        <p class="mb-2 text-black dark:text-black">The main difference is that the core components from Flowbite are open source under the MIT license, whereas Tailwind UI is a paid product. Another difference is that Flowbite relies on smaller and standalone components, whereas Tailwind UI offers sections of pages.</p>
-                        <p class="mb-2 text-black dark:text-black">However, we actually recommend using both Flowbite, Flowbite Pro, and even Tailwind UI as there is no technical reason stopping you from using the best of two worlds.</p>
-                        <p class="mb-2 text-black dark:text-black">Learn more about these technologies:</p>
-                        <ul class="pl-5 text-slate-500 list-disc dark:text-slate-400">
-                          <li><a href="https://flowbite.com/pro/" class="text-blue-600 dark:text-blue-500 hover:underline">Flowbite Pro</a></li>
-                          <li><a href="https://tailwindui.com/" rel="nofollow" class="text-blue-600 dark:text-blue-500 hover:underline">Tailwind UI</a></li>
-                        </ul>
+                      <div class="p-5 border border-t-0 border-slate-200 bg-slate-200">
+                        <p class="mb-2 text-black dark:text-black">You can reach out to our admissions team by Contacting them in the <a href="./Pages/contact.html" class="font-bold text-[#00D897]">Contact page</a></p>
                       </div>
                     </div>
                   </div>
