--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
 
     <!-- FAQ -->
     <section class="bg-slate-300 transition-all duration-200 ease-in-out">
-        <h1 class=" titre font-bold text-3xl text-center flex justify-center py-10 mx-auto ">FAQ <span class="text-[#00D897]">.</span>
+        <h1 class=" titre font-black text-slate-800 text-3xl text-center flex justify-center py-10 mx-auto ">FAQ <span class="text-[#00D897]">.</span>
         </h1>
         <section class=" bg-slate-300 text-slate-600 body-font overflow-hidden">
             <div class="container px-5 py-12 mx-auto">
               <div class="lg:w-4/5 mx-auto flex flex-wrap items-center">
-                <img alt="ecommerce" class="lg:w-1/2 w-full lg:h-[450px] object-cover object-center" src="./Graphics/FAQ.svg">
+                <img alt="faq" class="lg:w-1/2 w-full" src="./Graphics/FAQ.svg">
                 <div class="lg:w-2/4 w-full lg:pl-10 lg:py-0 mt-6 lg:mt-0">
-                  <h1 class="text-slate-900 text-3xl title-font font-bold text-center pb-[50px]">Frequently Asked Question</h1>
+                  <h1 class="text-slate-800 text-3xl title-font font-bold text-center pb-[50px]">Frequently Asked Question</h1>
 
 
                   <!-- Dropdown textfield -->
-                  <div id="accordion-collapse" data-accordion="collapse">
+                  <div id="accordion-collapse" data-accordion="collapse" class="w-full">
                       <h2 id="accordion-collapse-heading-1">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  dark:text-black " data-accordion-target="#accordion-collapse-body-1" aria-expanded="true" aria-controls="accordion-collapse-body-1">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-slate-800  dark:text-slate-800 " data-accordion-target="#accordion-collapse-body-1" aria-expanded="true" aria-controls="accordion-collapse-body-1">
                           <span>What is OFPPT ISTA Zenata?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -153,14 +153,14 @@
                     </h2>
                     <div id="accordion-collapse-body-1" class="hidden" aria-labelledby="accordion-collapse-heading-1">
                       <div class="p-5  bg-slate-200">
-                        <p class="mb-2 text-black dark:text-black">Founded in 1974, OFPPT is a public training institution. It offers vocational training free of charge. The training is based on a demand-driven strategy meeting the qualification needs and requirements of the labor market. OFPPT has a large network of training centers all over Morocco. These centers provide acknowledged competencies at the service of business companies.</p>
+                        <p class="mb-2 text-slate-800 dark:text-slate-800">Founded in 1974, OFPPT is a public training institution. It offers vocational training free of charge. The training is based on a demand-driven strategy meeting the qualification needs and requirements of the labor market. OFPPT has a large network of training centers all over Morocco. These centers provide acknowledged competencies at the service of business companies.</p>
                         
                       </div>
                     </div>
                     <div class="py-[10px]"></div>
 
                     <h2 id="accordion-collapse-heading-2">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  ark:text-black " data-accordion-target="#accordion-collapse-body-2" aria-expanded="true" aria-controls="accordion-collapse-body-2">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-slate-800  ark:text-slate-800 " data-accordion-target="#accordion-collapse-body-2" aria-expanded="true" aria-controls="accordion-collapse-body-2">
                           <span >How long do the programs at ISTA Zenata typically last?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -169,14 +169,14 @@
                     </h2>
                     <div id="accordion-collapse-body-2" class="hidden" aria-labelledby="accordion-collapse-heading-2">
                       <div class="p-5 bg-slate-200">
-                        <p class="mb-2 text-black dark:text-black">Program durations vary depending on the field of study. You can find detailed information about the duration of each
+                        <p class="mb-2 text-slate-800 dark:text-slate-800">Program durations vary depending on the field of study. You can find detailed information about the duration of each
                         program on the respective program pages.</p>
                         
                       </div>
                     </div>
                     <div class="py-[10px]"></div>
                     <h2 id="accordion-collapse-heading-3">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rk:text-black " data-accordion-target="#accordion-collapse-body-3" aria-expanded="true" aria-controls="accordion-collapse-body-3">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-slate-800  rk:text-slate-800 " data-accordion-target="#accordion-collapse-body-3" aria-expanded="true" aria-controls="accordion-collapse-body-3">
                           <span>How can I apply for a program at ISTA Zenata?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -185,12 +185,12 @@
                     </h2>
                     <div id="accordion-collapse-body-3" class="hidden" aria-labelledby="accordion-collapse-heading-3">
                       <div class="p-5 border border-t-0 border-slate-200 bg-slate-200">
-                        <p class="mb-2 text-black dark:text-black">To apply for a program, please visit our Application Page and follow the instructions provided.</p>
+                        <p class="mb-2 text-slate-800 dark:text-slate-800">To apply for a program, please visit our Application Page and follow the instructions provided.</p>
                       </div>
                     </div>
                     <div class="py-[10px]"></div>
                     <h2 id="accordion-collapse-heading-4">
-                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-black  rk:text-black " data-accordion-target="#accordion-collapse-body-4" aria-expanded="true" aria-controls="accordion-collapse-body-4">
+                        <button type="button" class=" bg-slate-100 flex items-center justify-between w-full p-5 font-medium text-left text-slate-800  rk:text-slate-800 " data-accordion-target="#accordion-collapse-body-4" aria-expanded="true" aria-controls="accordion-collapse-body-4">
                           <span>How can I contact the admissions office for further assistance?</span>
                         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5 5 1 1 5"/>
@@ -199,7 +199,7 @@
                     </h2>
                     <div id="accordion-collapse-body-4" class="hidden" aria-labelledby="accordion-collapse-heading-4">
                       <div class="p-5 border border-t-0 border-slate-200 bg-slate-200">
-                        <p class="mb-2 text-black dark:text-black">You can reach out to our admissions team by Contacting them in the <a href="./Pages/contact.html" class="font-bold text-[#00D897]">Contact page</a></p>
+                        <p class="mb-2 text-slate-800 dark:text-slate-800">You can reach out to our admissions team by Contacting them in the <a href="./Pages/contact.html" class="font-bold text-[#00D897]">Contact page</a></p>
                       </div>
                     </div>
                   </div>
@@ -211,15 +211,15 @@
 
 
     <!-- Quick About -->
-    <section class="bg-gradient-to-tr from-[#00D897] to-[#00D897B3] h-[100vh] py-32">
-        <div class="container flex flex-col justify-center items-center mx-auto text-center h-full space-y-10">
-            <div class="text-5xl font-black text-slate-800">About Us</div>
-            <div class="mx-auto text-center flex justify-center text-lg md:text-xl">Welcome to OFPPT ISTA Zenata, where we're dedicated to shaping futures
+    <section class="bg-slate-800 h-[100vh] py-32">
+        <div class="container flex flex-col justify-center items-center mx-auto text-center h-full space-y-20">
+            <div class="text-5xl font-black text-white uppercase tracking-widest">About Us<span class="text-[#00D897]">.</span></div>
+            <div class="mx-auto text-center flex justify-center text-white text-lg md:text-2xl w-2/3">Welcome to OFPPT ISTA Zenata, where we're dedicated to shaping futures
                 and nurturing talent. With a rich history of
                 excellence in education, we provide top-tier professional training programs designed to equip you with
                 the skills and
                 knowledge needed for success in today's dynamic industries.</div>
-            <div class=""><a class="bg-white py-3 px-4 hover:scale-110  hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 uppercase text-xl font-extrabold shadow-lg shadow-[#ffffff77]"
+            <div class=""><a class="bg-[#00D897] py-3 px-4 hover:scale-110  hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 uppercase text-2xl font-extrabold shadow-lg shadow-[#00D8974D]"
                     href="#">Learn More</a></div>
         </div>
     </section>
@@ -306,18 +306,18 @@
         </div>
         <div class="bg-slate-100">
           <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-            <p class="text-slate-500 text-sm text-center sm:text-left">© 2020 Tailblocks —
-              <a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-slate-600 ml-1"
-                target="_blank">@knyttneve</a>
+            <p class="text-slate-500 text-sm text-center sm:text-left">© 2023 Ista Zenata —
+              <a href="https://github.com/kourdroid/ista/" rel="noopener noreferrer" class="text-slate-600 ml-1"
+                target="_blank">@Collaborators</a>
             </p>
             <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-              <a class="text-slate-500">
+              <a class="text-slate-500 hover:text-[#00D897] cursor-pointer">
                 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
                   viewBox="0 0 24 24">
                   <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
                 </svg>
               </a>
-              <a class="ml-3 text-slate-500">
+              <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
                 <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
                   viewBox="0 0 24 24">
                   <path
@@ -325,14 +325,14 @@
                   </path>
                 </svg>
               </a>
-              <a class="ml-3 text-slate-500">
+              <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   class="w-5 h-5" viewBox="0 0 24 24">
                   <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                   <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
                 </svg>
               </a>
-              <a class="ml-3 text-slate-500">
+              <a class="ml-3 text-slate-500 hover:text-[#00D897] cursor-pointer">
                 <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0"
                   class="w-5 h-5" viewBox="0 0 24 24">
                   <path stroke="none"
