--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
 
     <!-- Ista Process  -->
     <section class=" h-full md:h-[100vh] py-20 bg-[#00D897] flex items-center">
-        <div
-            class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  md:flex md:flex-row md:space-x-10 md:space-y-0 md:justify-between md:items-center">
+        <div class="container mx-auto flex-col items-center justify-center space-y-10 space-x-0 j  md:flex md:flex-row md:space-x-10 md:space-y-0 md:justify-between md:items-center">
             <div
                 class=" space-y-2 hover:bg-[#00C288] py-8  px-2 hover:scale-105 transition-all duration-200 ease-in-out lg:space-y-8 w-full">
                 <div class="justify-center h-full md:h-[350px] items-center"><img class="h-[250px] md:h-[350px] mx-auto"
@@ -126,7 +125,6 @@
               </div>
             </figcaption>
           </figure>
-
     </section>
 
     <!-- FAQ -->
@@ -220,7 +218,7 @@
                 the skills and
                 knowledge needed for success in today's dynamic industries.</div>
             <div class=""><a class="bg-[#00D897] py-3 px-4 hover:scale-110  hover:tracking-[0.2em] transition-all duration-300 ease-in-out  text-slate-800 uppercase text-2xl font-extrabold shadow-lg shadow-[#00D8974D]"
-                    href="#">Learn More</a></div>
+                    href="./Pages/about.html">Learn More</a></div>
         </div>
     </section>
 
